# rust-tio-template

./: Cargo.toml  README.md  index.html  publish.sh  start.sh
pkg/: README.md  mylib.d.ts  mylib.js  mylib_bg.wasm  mylib_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
